fixed width jump issue with book contentLayout and imageContent

--- a/src/app/components/Book-Page-Content/Book-Page-Content.module.scss
+++ b/src/app/components/Book-Page-Content/Book-Page-Content.module.scss
@@ -19,6 +19,7 @@
     width: 750px;
   }
   @media (max-width: 724px) {
+    width: 750px;
 
   }
 }
